--- a/inspectit-ocelot-core/build.gradle
+++ b/inspectit-ocelot-core/build.gradle
@@ -70,6 +70,9 @@ dependencies {
 
             // logging
             libs.chQosLogbackLogbackClassic,
+            libs.chQosLogbackLogbackCore,
+            libs.orgSlf4jslf4jApi,
+            libs.orgSlf4jJulToSlf4j,
             // logstash support (JSON logging)
             libs.netLogstashLogbackLogstashLogbackEncoder,
 
@@ -162,6 +165,9 @@ dependencies {
             libs.ioGithubNetmikeyLogunitLogunitCore,
             // jul-slf4j bridge needed to redirect OTEL logs using java.util.logging to logback
             libs.orgSlf4jJulToSlf4j,
+            libs.chQosLogbackLogbackClassic,
+            libs.chQosLogbackLogbackCore,
+            libs.orgSlf4jslf4jApi,
     )
     testRuntimeOnly(
             libs.orgJunitJupiterJunitJupiterEngine,
@@ -181,6 +187,9 @@ dependencies {
             because 'security issues'
         }
         implementation(libs.comSquareupOkio) {
+            because 'security issues'
+        }
+        implementation(libs.orgSlf4jslf4jApi) {
             because 'security issues'
         }
     }
