--- a/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/ignores.yml
+++ b/inspectit-ocelot-config/src/main/resources/rocks/inspectit/ocelot/config/default/instrumentation/ignores.yml
@@ -16,7 +16,7 @@ inspectit:
       '[java.lang.invoke.]': true
       '[io.opentelemetry.]': true
 
-    # defines all packages packages whose classes and subpackages should be ignored
+    # defines all packages whose classes and subpackages should be ignored
     # the given strings are matches as prefixes for classes, therefore packages have to end with a dot
     # however, for the trailing dots to be interpreted correctly you need to enclose the package in '[<package>]'
     ignored-packages:
