update configurationserver base image

--- a/components/inspectit-ocelot-configurationserver/docker/Dockerfile
+++ b/components/inspectit-ocelot-configurationserver/docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM eclipse-temurin:17
+# Use lightweight base image with OpenJDK (supports multi-platform)
+FROM amazoncorretto:17-alpine
 
 ADD ./  /
 ENTRYPOINT ["sh", "/entrypoint.sh"]
