--- a/.github/workflows/configschemagenerator.yml
+++ b/.github/workflows/configschemagenerator.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: configuration-schema
-          path: components/inspectit-ocelot-configschemagenerator/build/
+          path: components/inspectit-ocelot-configschemagenerator/build/*.json
 
   dependency-scan:
     name: Dependency Scan
