--- a/inspectit-ocelot-sdk/build.gradle
+++ b/inspectit-ocelot-sdk/build.gradle
@@ -6,6 +6,14 @@ plugins {
     alias(libs.plugins.ioSpringDependencyManagement)
 }
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
 dependencyManagement {
     imports {
         mavenBom(SpringBootPlugin.BOM_COORDINATES)
