--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,8 +8,8 @@ ioGrpc = "1.72.0"
 # Ensure to adapt the netty version when changing the OpenCensus version
 # If you rename or move this variable to another file, adjust the release-workflow
 ioOpencensus = "0.31.1"
-ioOpentelemetry = "1.49.0"
-ioOpentelemetryAlpha = "1.49.0-alpha"
+ioOpentelemetry = "1.50.0"
+ioOpentelemetryAlpha = "1.50.0-alpha"
 ioOpentelemetryProto = "1.5.0-alpha"
 ioOpentelemetrySemconv = "1.32.0"
 orgApacheLoggingLog4j = "2.24.3"
@@ -76,8 +76,9 @@ ioOpentelemetryOpentelemetrySemconv = { module = "io.opentelemetry.semconv:opent
 ioPrometheusSimpleclientHttpserver = "io.prometheus:simpleclient_httpserver:0.16.0"
 javaxAnnotationJavaxAnnotationApi = "javax.annotation:javax.annotation-api:1.3.2"
 log4j = "log4j:log4j:1.2.17"
-# Note: Updating to 1.15.* will probably result in rewriting tests
-netBytebuddyByteBuddy = "net.bytebuddy:byte-buddy:1.14.19"
+# @pin Newer versions have changed the behaviour of the equals() method of ElementMatchers
+# We need a solution to be properly able to compare InstrumentationScope objects
+netBytebuddyByteBuddy = "net.bytebuddy:byte-buddy:1.15.4"
 # @pin logback 7.* is the last version for Java 8
 netLogstashLogbackLogstashLogbackEncoder = "net.logstash.logback:logstash-logback-encoder:7.4"
 orgApacheCommonsCommonsLang3 = "org.apache.commons:commons-lang3:3.17.0"
@@ -86,7 +87,7 @@ orgApacheHttpcomponentsHttpclient = "org.apache.httpcomponents:httpclient:4.5.14
 orgApacheLoggingLog4jLog4jApi = { module = "org.apache.logging.log4j:log4j-api", version.ref = "orgApacheLoggingLog4j" }
 orgApacheLoggingLog4jLog4jCore = { module = "org.apache.logging.log4j:log4j-core", version.ref = "orgApacheLoggingLog4j" }
 # @pin Tomcat 9.0.* is the last version to support java 8
-orgApacheTomcatEmbedTomcatEmbedEl = "org.apache.tomcat.embed:tomcat-embed-el:9.0.98"
+orgApacheTomcatEmbedTomcatEmbedEl = "org.apache.tomcat.embed:tomcat-embed-el:9.0.105"
 orgAssertjAssertjCore = "org.assertj:assertj-core:3.27.3"
 orgAssertjAssertjGuava = "org.assertj:assertj-guava:3.27.3"
 orgAwaitility = "org.awaitility:awaitility:4.3.0"
