--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -82,6 +82,9 @@ netLogstashLogbackLogstashLogbackEncoder = "net.logstash.logback:logstash-logbac
 orgApacheCommonsCommonsLang3 = "org.apache.commons:commons-lang3:3.17.0"
 orgApacheCommonsCommonsMath3 = "org.apache.commons:commons-math3:3.6.1"
 orgApacheHttpcomponentsHttpclient = "org.apache.httpcomponents:httpclient:4.5.14"
+orgApacheHttpcomponentsClient5Httpclient5 = "org.apache.httpcomponents.client5:httpclient5:5.4.4"
+# use the same version for core5 as client5
+orgApacheHttpcomponentsCore5Httpcore5 = "org.apache.httpcomponents.core5:httpcore5:5.3.4"
 orgApacheLoggingLog4jLog4jApi = { module = "org.apache.logging.log4j:log4j-api", version.ref = "orgApacheLoggingLog4j" }
 orgApacheLoggingLog4jLog4jCore = { module = "org.apache.logging.log4j:log4j-core", version.ref = "orgApacheLoggingLog4j" }
 # @pin Tomcat 9.0.* is the last version to support java 8
