--- a/.github/workflows/configurationserver_test.yml
+++ b/.github/workflows/configurationserver_test.yml
@@ -43,6 +43,11 @@ jobs:
       - name: test
         run: ../../gradlew test
         working-directory: ${{env.working-directory}}
+      - name: Upload jar
+        uses: actions/upload-artifact@v4
+        with:
+          name: configuration-server
+          path: ./components/inspectit-ocelot-configurationserver/build/libs/*.jar
 
   dependency-scan:
     name: Dependency Scan
