--- a/gradle/configserverlibs.versions.toml
+++ b/gradle/configserverlibs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
 ioJsonwebtoken = "0.12.6"
-orgEclipseJgit = "7.2.0.202503040940-r"
-orgMockito = "5.17.0"
-# Take a look at spring version
-orgJunitJupiter = "5.11.4"
-orgSpringframeworkBoot = { strictly = "3.4.5" }
-orgSpringframeworkSecurity = "6.4.5"
+orgEclipseJgit = "7.3.0.202506031305-r"
+orgMockito = "5.18.0"
+# Use same version as spring boot
+orgJunitJupiter = "5.12.2"
+orgSpringframeworkBoot = { strictly = "3.5.0" }
+orgSpringframeworkSecurity = "6.5.0"
 jsonSchemaGenerator = "4.38.0"
 
 [libraries]
@@ -23,7 +23,7 @@ orgApacheCommonsCommonsLang3 = "org.apache.commons:commons-lang3:3.17.0"
 orgAwaitility = "org.awaitility:awaitility:4.3.0"
 orgEclipseJgitOrgEclipseJgit = { module = "org.eclipse.jgit:org.eclipse.jgit", version.ref = "orgEclipseJgit" }
 orgEclipseJgitOrgEclipseJgitSshApache= {module = "org.eclipse.jgit:org.eclipse.jgit.ssh.apache", version.ref = "orgEclipseJgit" }
-orgFlywaydbFlywayCore = "org.flywaydb:flyway-core:11.8.2"
+orgFlywaydbFlywayCore = "org.flywaydb:flyway-core:11.9.1"
 orgHibernateOrmHibernateCommunityDialects = "org.hibernate.orm:hibernate-community-dialects:6.6.15.Final"
 orgJunitJupiterJunitJupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "orgJunitJupiter" }
 orgJunitJupiterJunitJupiterApi = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "orgJunitJupiter" }
@@ -34,14 +34,14 @@ orgSpringframeworkBootSpringBootStarterDataJpa = { module = "org.springframework
 orgSpringframeworkBootSpringBootStarterTest = { module = "org.springframework.boot:spring-boot-starter-test", version.ref = "orgSpringframeworkBoot" }
 orgSpringframeworkBootSpringBootStarterWeb = { module = "org.springframework.boot:spring-boot-starter-web", version.ref = "orgSpringframeworkBoot" }
 orgSpringframeworkBootSpringBootStartervalidation = { module = "org.springframework.boot:spring-boot-starter-validation", version.ref = "orgSpringframeworkBoot" }
-orgSpringframeworkLdapSpringLdapCore = "org.springframework.ldap:spring-ldap-core:3.2.12"
+orgSpringframeworkLdapSpringLdapCore = "org.springframework.ldap:spring-ldap-core:3.3.0"
 orgSpringframeworkSecuritySpringSecurityLdap = { module = "org.springframework.security:spring-security-ldap", version.ref = "orgSpringframeworkSecurity" }
 orgSpringframeworkSecuritySpringSecurityTest = { module = "org.springframework.security:spring-security-test", version.ref = "orgSpringframeworkSecurity" }
 orgSpringframeworkSecuritySpringSecurityWeb = { module = "org.springframework.security:spring-security-web", version.ref = "orgSpringframeworkSecurity" }
 orgSpringframeworksecuritySpringSecurityConfig = { module = "org.springframework.security:spring-security-config", version.ref = "orgSpringframeworkSecurity" }
 chQosLogbackLogbackClassic = "ch.qos.logback:logback-classic:1.5.18"
 chQosLogbackLogbackCore = "ch.qos.logback:logback-core:1.5.18"
-orgXerialSqliteJdbc = "org.xerial:sqlite-jdbc:3.49.1.0"
+orgXerialSqliteJdbc = "org.xerial:sqlite-jdbc:3.50.1.0"
 orgYamlSnakeyaml = "org.yaml:snakeyaml:2.4"
 
 [bundles]
