fix configschemagenerator test

--- a/components/inspectit-ocelot-configschemagenerator/build.gradle
+++ b/components/inspectit-ocelot-configschemagenerator/build.gradle
@@ -1,6 +1,10 @@
+plugins {
+    alias(configServerLibs.plugins.orgSpringframeworkBoot)
+}
+
 dependencies {
     testImplementation(
-            configServerLibs.orgJunitJupiterJunitJupiter
+            configServerLibs.orgSpringframeworkBootSpringBootStarterTest,
     )
 
     implementation(
