--- a/.github/workflows/agent_security_check.yml
+++ b/.github/workflows/agent_security_check.yml
@@ -41,10 +41,10 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.RESEND_API_KEY }}" \
             -H "Content-Type: application/json" \
             -d '{
-              "from": "inspectIT Ocelot DepCheck <inspectit-ocelot-depcheck@github.com>",
+              "from": "inspectIT Ocelot DepCheck <inspectit-ocelot-depcheck@resend.dev>",
               "to": ["info.inspectit@novatec-gmbh.de"],
               "subject": "Ocelot-Agent Dependency-Check Report - ${{ steps.depcheck.outcome }}",
-              "text": "The Dependency-Check for inspectit-ocelot-agent completed with status: ${{ steps.depcheck.outcome }}.\n\nPlease check the report here: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+              "html": "<p>The Dependency-Check for inspectit-ocelot-agent completed with status: <strong>${{ steps.depcheck.outcome }}</strong>.</p><p>Please check the report here: <a href='https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'></a></p>"
             }'
       # if DependencyCheck failed, the job should also fail, but only after the results were uploaded
       - name: Validate DependencyCheck outcome
